(executable
    (name OniUnitTestRunner)
    (public_name OniUnitTestRunner)
    (modules OniUnitTestRunner)
    (package OniUnitTestRunner)
    (libraries
        yojson
        Oni_Core_Test
        Oni_Model_Test
        Oni_Neovim_Test
            ))

(executable
    (name OniUnitTestRunnerCI)
    (public_name OniUnitTestRunnerCI)
    (modules OniUnitTestRunnerCI)
    (package OniUnitTestRunner)
    (libraries
        yojson
        Oni_Core_Test
        Oni_Model_Test
        Oni_Neovim_Test
            ))
