(library
 (name Component_Accordion)
 (public_name Oni2.component.accordion)
 (inline_tests)
 (libraries Oni2.core Oni2.component.vimList Oni2.components Revery isolinear
   Oni2.feature.commands Oni2.feature.sneak)
 (preprocess
  (pps ppx_inline_test ppx_let ppx_deriving.show brisk-reconciler.ppx)))
